2012-12-19  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (get_tasks): Move the get_tasks_response to follow
	the others, otherwise the error dialogs end up under the table.
	(new_task): Add filter args to container case.

2012-12-19  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (new_task): Update Wizard and New icons to new style.
	Get overrides value from envelope.

	* src/html/wizard.xsl (wizard-icon): Add filter params.
	(quick_first_scan): Add filter params.  Remove overrides param.

2012-12-19  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (create_task_omp): Remove apply_overrides variable
	which is handled by get_tasks now.

	* src/html/omp.xsl (new_task): Add filter params.  Skip the overrides
	param if there is a filt_id, because the overrides param changes the
	filter on the get_tasks page.

2012-12-19  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (details-header-icon): Add missing filt_id param to
	New icon.

2012-12-19  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (task-icons): New template.
	(task [details], task): Use task-icons in both cases.  This brings
	missing filter params to the details case.

2012-12-19  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (resource_action): Add missing terminator from last
	commit.

2012-12-19  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (resource_action): Get success before freeing entity.

2012-12-19  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/omp.xsl (html-edit-task-form, new_task): Add extra hidden
	Create Task button before "+" button to force Create Task to be the
	default.

2012-12-19  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/gsad_omp.c (get_many): Add apply_overrides to default task filter.

2012-12-18  Matthew Mundell <matthew.mundell@greenbone.net>

	* src/html/gsad.xsl (error_window): New template.
